Fix states of Sector's fields and move sector's field from variant to product's template

--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -13,16 +13,16 @@ msgid "The name of a party sector must be unique by parent."
 msgstr "El nombre del sector debe ser único por padre."
 
 msgctxt "field:party.party,products:"
-msgid "products"
+msgid "Products"
 msgstr "Productos"
 
 msgctxt "field:party.party,related_sectors:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "field:party.party,sectors:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "field:party.party-party.sector,create_date:"
 msgid "Create Date"
@@ -96,49 +96,53 @@ msgctxt "field:party.sector,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
 
-msgctxt "field:product.product,parties:"
+msgctxt "field:product.template,parties:"
 msgid "Parties"
 msgstr "Terceros"
 
-msgctxt "field:product.product,related_sectors:"
+msgctxt "field:product.template,related_sectors:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
-msgctxt "field:product.product,sectors:"
+msgctxt "field:product.template,sectors:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
-msgctxt "field:product.product-party.sector,create_date:"
+msgctxt "field:product.template-party.sector,create_date:"
 msgid "Create Date"
 msgstr "Fecha de creación"
 
-msgctxt "field:product.product-party.sector,create_uid:"
+msgctxt "field:product.template-party.sector,create_uid:"
 msgid "Create User"
 msgstr "Usuario de creación"
 
-msgctxt "field:product.product-party.sector,id:"
+msgctxt "field:product.template-party.sector,id:"
 msgid "ID"
 msgstr "Identificador"
 
-msgctxt "field:product.product-party.sector,product:"
-msgid "Product"
-msgstr "Productos"
-
-msgctxt "field:product.product-party.sector,rec_name:"
+msgctxt "field:product.template-party.sector,rec_name:"
 msgid "Name"
 msgstr "Nombre"
 
-msgctxt "field:product.product-party.sector,sector:"
+msgctxt "field:product.template-party.sector,sector:"
 msgid "Sector"
 msgstr "Sector"
 
-msgctxt "field:product.product-party.sector,write_date:"
+msgctxt "field:product.template-party.sector,template:"
+msgid "Product Template"
+msgstr "Plantilla de producto"
+
+msgctxt "field:product.template-party.sector,write_date:"
 msgid "Write Date"
 msgstr "Fecha modificación"
 
-msgctxt "field:product.product-party.sector,write_uid:"
+msgctxt "field:product.template-party.sector,write_uid:"
 msgid "Write User"
 msgstr "Usuario modificación"
+
+msgctxt "model:ir.action,name:act_open_sector"
+msgid "Open Sector"
+msgstr "Abrir sector"
 
 msgctxt "model:ir.action,name:act_party_product"
 msgid "Products"
@@ -149,44 +153,44 @@ msgid "Parties"
 msgstr "Terceros"
 
 msgctxt "model:ir.action,name:act_related_party"
-msgid "Parties"
-msgstr "Terceros"
+msgid "Parties by sector"
+msgstr "Terceros por sector"
 
 msgctxt "model:ir.action,name:act_related_product"
-msgid "Products"
-msgstr "Productos"
+msgid "Products by sector"
+msgstr "Productos por sector"
 
 msgctxt "model:ir.action,name:act_sector_list"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.action,name:act_sector_list_product"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.action,name:act_sector_tree"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.action,name:act_sector_tree_product"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.ui.menu,name:menu_sector_list"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.ui.menu,name:menu_sector_list_product"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.ui.menu,name:menu_sector_tree"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:ir.ui.menu,name:menu_sector_tree_product"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "model:party.party-party.sector,name:"
 msgid "Party - Sector"
@@ -196,13 +200,13 @@ msgctxt "model:party.sector,name:"
 msgid "Sector"
 msgstr "Sector"
 
-msgctxt "model:product.product-party.sector,name:"
-msgid "Product - Sector"
-msgstr "Producto - Sector"
+msgctxt "model:product.template-party.sector,name:"
+msgid "Product Template - Sector"
+msgstr "Plantilla producto - Sector"
 
 msgctxt "view:party.party:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
 
 msgctxt "view:party.sector:"
 msgid "Sector"
@@ -210,4 +214,8 @@ msgstr "Sector"
 
 msgctxt "view:party.sector:"
 msgid "Sectors"
-msgstr "Sectors"
+msgstr "Sectores"
+
+msgctxt "view:product.template:"
+msgid "Sectors"
+msgstr "Sectores"
