--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -13,7 +13,7 @@ msgid "The name of a party sector must be unique by parent."
 msgstr "El nom del sector ha de ser únic per pare."
 
 msgctxt "field:party.party,products:"
-msgid "products"
+msgid "Products"
 msgstr "Productes"
 
 msgctxt "field:party.party,related_sectors:"
@@ -96,49 +96,53 @@ msgctxt "field:party.sector,write_uid:"
 msgid "Write User"
 msgstr "Usuari modificació"
 
-msgctxt "field:product.product,parties:"
+msgctxt "field:product.template,parties:"
 msgid "Parties"
 msgstr "Tercers"
 
-msgctxt "field:product.product,related_sectors:"
+msgctxt "field:product.template,related_sectors:"
 msgid "Sectors"
 msgstr "Sectors"
 
-msgctxt "field:product.product,sectors:"
+msgctxt "field:product.template,sectors:"
 msgid "Sectors"
 msgstr "Sectors"
 
-msgctxt "field:product.product-party.sector,create_date:"
+msgctxt "field:product.template-party.sector,create_date:"
 msgid "Create Date"
 msgstr "Data de creació"
 
-msgctxt "field:product.product-party.sector,create_uid:"
+msgctxt "field:product.template-party.sector,create_uid:"
 msgid "Create User"
 msgstr "Usuari de creació"
 
-msgctxt "field:product.product-party.sector,id:"
+msgctxt "field:product.template-party.sector,id:"
 msgid "ID"
 msgstr "Identificador"
 
-msgctxt "field:product.product-party.sector,product:"
-msgid "Product"
-msgstr "Productes"
-
-msgctxt "field:product.product-party.sector,rec_name:"
+msgctxt "field:product.template-party.sector,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:product.product-party.sector,sector:"
+msgctxt "field:product.template-party.sector,sector:"
 msgid "Sector"
 msgstr "Sector"
 
-msgctxt "field:product.product-party.sector,write_date:"
+msgctxt "field:product.template-party.sector,template:"
+msgid "Product Template"
+msgstr "Plantilla de producte"
+
+msgctxt "field:product.template-party.sector,write_date:"
 msgid "Write Date"
 msgstr "Data modificació"
 
-msgctxt "field:product.product-party.sector,write_uid:"
+msgctxt "field:product.template-party.sector,write_uid:"
 msgid "Write User"
 msgstr "Usuari modificació"
+
+msgctxt "model:ir.action,name:act_open_sector"
+msgid "Open Sector"
+msgstr "Obrir sector"
 
 msgctxt "model:ir.action,name:act_party_product"
 msgid "Products"
@@ -149,12 +153,12 @@ msgid "Parties"
 msgstr "Tercers"
 
 msgctxt "model:ir.action,name:act_related_party"
-msgid "Parties"
-msgstr "Tercers"
+msgid "Parties by sector"
+msgstr "Tercers per sector"
 
 msgctxt "model:ir.action,name:act_related_product"
-msgid "Products"
-msgstr "Productes"
+msgid "Products by sector"
+msgstr "Productes per sector"
 
 msgctxt "model:ir.action,name:act_sector_list"
 msgid "Sectors"
@@ -196,9 +200,9 @@ msgctxt "model:party.sector,name:"
 msgid "Sector"
 msgstr "Sector"
 
-msgctxt "model:product.product-party.sector,name:"
-msgid "Product - Sector"
-msgstr "Producte - Sector"
+msgctxt "model:product.template-party.sector,name:"
+msgid "Product Template - Sector"
+msgstr "Plantilla producte - Sector"
 
 msgctxt "view:party.party:"
 msgid "Sectors"
@@ -209,5 +213,9 @@ msgid "Sector"
 msgstr "Sector"
 
 msgctxt "view:party.sector:"
+msgid "Sectors"
+msgstr "Sectors"
+
+msgctxt "view:product.template:"
 msgid "Sectors"
 msgstr "Sectors"
